--- a/dl/notebooks/05_Large Language Models/[참고 4] Function Calling.ipynb
+++ b/dl/notebooks/05_Large Language Models/[참고 4] Function Calling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,16 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatCompletionMessage(content=None, refusal=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_PrKS3XaTEN2Bt8W41y4wAIdi', function=Function(arguments='{\"c_name\": \"John\"}', name='get_customer_name'), type='function'), ChatCompletionMessageToolCall(id='call_31eX8FRVMODCljwxmqGW0O8S', function=Function(arguments='{\"order_id\": \"order12345\"}', name='get_delivery_date'), type='function')])"
+       "ChatCompletionMessage(content=None, refusal=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_QG13dtwEEGqK9ry8yONwKgvC', function=Function(arguments='{\"c_name\": \"John\"}', name='get_customer_name'), type='function'), ChatCompletionMessageToolCall(id='call_oUCpUmbtIhnH5qHPqWpy2VNR', function=Function(arguments='{\"order_id\": \"order12345\"}', name='get_delivery_date'), type='function')])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
     "# messages.append({\"role\": \"user\", \"content\": \"쓸데없는 소리\"}) => 출력 확인해보자\n",
     "\n",
     "response = client.chat.completions.create(\n",
-    "    model=\"gpt-4o\", messages=messages, tools=tools  # 지원 도구 설정\n",
+    "    model=\"gpt-4o-mini\", messages=messages, tools=tools  # 지원 도구 설정\n",
     ")\n",
     "\n",
     "response.choices[0].message"
@@ -168,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletionMessageToolCall(id='call_PrKS3XaTEN2Bt8W41y4wAIdi', function=Function(arguments='{\"c_name\": \"John\"}', name='get_customer_name'), type='function')\n"
+      "ChatCompletionMessageToolCall(id='call_ySLXiwJMoEGquexI7Tev04hk', function=Function(arguments='{\"c_name\": \"John\"}', name='get_customer_name'), type='function')\n"
      ]
     }
    ],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "[{'c_name': 'John'}, {'order_id': 'order12345'}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "'John'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "'2024-10-15'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
    ],
    "source": [
     "if response.choices[0].finish_reason == \"tool_calls\":\n",
-    "    arguments = json.loads(response.choices[0].message.tool_calls[0].function.arguments)\n",
+    "    arguments = json.loads(response.choices[0].message.tool_calls[1].function.arguments)\n",
     "    delivery_date = get_delivery_date(**arguments)\n",
     "\n",
     "    print(delivery_date)  # 이 내용을 Web UI 같은걸로 보여줄 수 있도록 코딩합니다."
